port to 26.2, update license